SFUSA/force-app/main/default/objects/Sample__c/fields/Barrel_Name__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Name__c</fullName>
        <formula>Barrel__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barrel Name</label>
        <type>Text</type>
    </CustomField>