SFUSA/force-app/main/default/objects/Sample__c/fields/Label__c.field-meta.xml
<CustomField>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>