SFUSA/force-app/main/default/objects/Sample__c/fields/Portal_Label__c.field-meta.xml
<CustomField>
        <fullName>Portal_Label__c</fullName>
        <formula>IF(ISBLANK(SampleId__c), 
right(Sample_Kit__r.Name ,len(Sample_Kit__r.Name)-(FIND(("-"), Sample_Kit__r.Name))) + '-' + Text(Label__c),
SampleId__c)</formula>
        <label>Portal Label</label>
        <type>Text</type>
    </CustomField>