SFUSA/force-app/main/default/objects/Sample__c/fields/SampleId__c.field-meta.xml
<CustomField>
        <fullName>SampleId__c</fullName>
        <description>Sample Id from the American Eagle Site</description>
        <externalId>true</externalId>
        <label>SampleId</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>